--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "community-engineering/language-bg_bg",
+    "version": "0.0.1",
     "type": "magento2-language",
     "description": "bg_BG language package.",
     "license": [
@@ -14,7 +15,7 @@
     },
     "autoload": {
         "files": [
-          "registration.php"
+            "registration.php"
         ]
     }
 }
